--- a/MASUK/login.css
+++ b/MASUK/login.css
@@ -14,6 +14,7 @@ body {
   background-position: center;
   background-size: cover;
   color: #fff;
+  overflow: hidden;
 }
 
 .wrap h1 {
@@ -57,7 +58,7 @@ body {
   font-size: 20px;
 }
 
-.kata .mata {
+.mata {
   all: unset;
   position: absolute;
   right: 15px;
@@ -66,6 +67,10 @@ body {
   font-size: 5px;
   /* border: 2px solid white;
   border-radius: 15px; */
+}
+
+.mata:hover {
+  cursor: pointer;
 }
 
 .kata input::placeholder {
